# mmai-project

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  nonBlockinGetKey.c
include/: delayline.hpp  revmodel.hpp  tuning.h
release/week16/: mmai-exec  readme.md
release/week17/: mmai-exec
release/week18/: mmai-exec
scripts/: build.sh
src/: delayline.cpp  mmai-project.cpp  revmodel.cpp
